<resources>
    <string name="app_name">Super Market</string>
    <string name="title">Super!Market</string>
    <string name="market_label_name">Super Market Name:</string>
    <string name="address">Address:</string>
    <string name="enter_street_address">Enter Street Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zipcode">Zipcode</string>
    <string name="liquor">Liquor Department</string>
    <string name="produce">Produce Department</string>
    <string name="meat">Meat Department</string>
    <string name="cheese">Cheese Department</string>
    <string name="checkout">Ease of Checkout</string>
    <string name="overall">Overall Rating</string>
    <string name="error">ERROR ratings did not save</string>
    <string name="main_activity_saved">Market Data is saved pleaase rate the store:</string>
    <string name="saved">Super!Market Ratings Saved!</string>
    <string name="message_window">Message Window</string>
    <string name="welcome_message">Welcome to the Party. Please Enter the following:</string>
    <string name="welcome_back">"Welcome Back the information you entered for %1$s Market has been saved with an overall rating score of %2$s. You can change a current store or enter a new store!"</string>
    <string name="current_calculation">Current Calculation</string>
    <string name="continue_rating">Continue Rating</string>
    <string name="final_save">Super!Market %1$s has been saved with an over all rating of %2$s!! </string>
    <string name="careful">Return to the app, be careful with the esc key!!!</string>
    <string name="save_back_main">Return to Main Screen</string>

</resources>